objects/ZPIF_UIP__c.object
<CustomObject><fields>
<fields>
        <fullName>Grow_AddMeas_1_subj1_MeetCutH__c</fullName>
        <label>AG Measure 1 Subject 1 Expectation HS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Grow_AddMeas_1_subj1_MeetCutM__c</fullName>
        <label>AG Measure 1 Subject 1 Expectation MS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Grow_AddMeas_1_subj1_Name__c</fullName>
        <label>AG Measure 1 Subject 1 Name</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Grow_AddMeas_1_subj1_ResultE__c</fullName>
        <label>AG Measure 1 Subject 1 Result Elem</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Grow_AddMeas_1_subj1_ResultH__c</fullName>
        <label>AG Measure 1 Subject 1 Result HS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Grow_AddMeas_1_subj1_ResultM__c</fullName>
        <label>AG Measure 1 Subject 1 Result MS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Grow_AddMeas_1_subj2_MeetCutE__c</fullName>
        <label>AG Measure 1 Subject 2 Expectation Elem</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Grow_AddMeas_1_subj2_MeetCutH__c</fullName>
        <label>AG Measure 1 Subject 2 Expectation HS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Grow_AddMeas_1_subj2_MeetCutM__c</fullName>
        <label>AG Measure 1 Subject 2 Expectation MS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Grow_AddMeas_1_subj2_Name__c</fullName>
        <label>AG Measure 1 Subject 2 Name</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Grow_AddMeas_1_subj2_ResultE__c</fullName>
        <label>AG Measure 1 Subject 2 Result Elem</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Grow_AddMeas_1_subj2_ResultH__c</fullName>
        <label>AG Measure 1 Subject 2 Result HS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Grow_AddMeas_1_subj2_ResultM__c</fullName>
        <label>AG Measure 1 Subject 2 Result MS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Grow_AddMeas_1_subj3_MeetCutE__c</fullName>
        <label>AG Measure 1 Subject 3 Expectation Elem</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Grow_AddMeas_1_subj3_MeetCutH__c</fullName>
        <label>AG Measure 1 Subject 3 Expectation HS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Grow_AddMeas_1_subj3_MeetCutM__c</fullName>
        <label>AG Measure 1 Subject 3 Expectation MS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Grow_AddMeas_1_subj3_Name__c</fullName>
        <label>AG Measure 1 Subject 3 Name</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Grow_AddMeas_1_subj3_ResultE__c</fullName>
        <label>AG Measure 1 Subject 3 Result Elem</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Grow_AddMeas_1_subj3_ResultH__c</fullName>
        <label>AG Measure 1 Subject 3 Result HS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Grow_AddMeas_1_subj3_ResultM__c</fullName>
        <label>AG Measure 1 Subject 3 Result MS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Grow_AddMeas_2_MeetNorm__c</fullName>
        <label>AG Measure 2 Expectation</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Grow_AddMeas_2_Metric__c</fullName>
        <label>AG Measure 2 Description</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Grow_AddMeas_2_Name__c</fullName>
        <label>AG Measure 2 Name</label>
        <length>75</length>
        <type>Text</type>
    </fields><fields>
        <fullName>H_ACH_PA_PCT_MATH__c</fullName>
        <label>HS Math</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>H_ACH_PA_PCT_READ__c</fullName>
        <label>H Read</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>H_ACH_PA_PCT_SCI__c</fullName>
        <label>HS Science</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>H_ACH_PA_PCT_WRITE__c</fullName>
        <label>HS Write</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>H_GRO_AGP_ELP__c</fullName>
        <label>HS AGP ELP</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>H_GRO_AGP_MATH__c</fullName>
        <label>HS AGP Math</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>H_GRO_AGP_READ__c</fullName>
        <label>HS AGP Read</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>H_GRO_AGP_WRITE__c</fullName>
        <label>HS AGP Write</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>H_GRO_MGP_ELP__c</fullName>
        <label>HS MGP ELP</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>H_GRO_MGP_MATH__c</fullName>
        <label>HS MGP Math</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>H_GRO_MGP_READ__c</fullName>
        <label>HS MGP Read</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>H_GRO_MGP_WRITE__c</fullName>
        <label>HS MGP Write</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>INCLUDED_EMH_FOR_A__c</fullName>
        <label>Included EMH for A</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Is_Version__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for versioning</description>
        <label>Is Version</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Last_Year_s_UIP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Year's UIP</label>
        <referenceTo>UIP__c</referenceTo>
        <relationshipLabel>UIP</relationshipLabel>
        <relationshipName>ZPIF_UIP</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>M_ACH_PA_PCT_MATH__c</fullName>
        <label>MS Math</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>M_ACH_PA_PCT_READ__c</fullName>
        <label>MS Read</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>M_ACH_PA_PCT_SCI__c</fullName>
        <label>MS Science</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>M_ACH_PA_PCT_WRITE__c</fullName>
        <label>MS Write</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>M_AGP_ELP__c</fullName>
        <label>MS AGP ELP</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>M_GRO_AGP_MATH__c</fullName>
        <label>MS AGP Math</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>M_GRO_AGP_READ__c</fullName>
        <label>MS AGP Read</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>M_GRO_AGP_WRITE__c</fullName>
        <label>MS AGP Write</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>M_GRO_MGP_ELP__c</fullName>
        <label>MS MGP ELP</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>M_GRO_MGP_MATH__c</fullName>
        <label>MS MGP Math</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>M_GRO_MGP_READ__c</fullName>
        <label>MS MGP Read</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>M_GRO_MGP_WRITE__c</fullName>
        <label>MS MGP Write</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Narrative_Academic_Achievement_Targets__c</fullName>
        <label>Narrative Academic Achievement Targets</label>
        <length>15000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Narrative_Academic_Growth_Gaps_Target__c</fullName>
        <label>Narrative Academic Growth Gaps Target</label>
        <length>20000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Narrative_Academic_Growth_Targets__c</fullName>
        <label>Narrative Academic Growth Targets</label>
        <length>15000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Narrative_Additional_Trend_Information__c</fullName>
        <label>Narrative Additional Trend Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Narrative_Additional__c</fullName>
        <label>Narrative Additional</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Narrative_Disaggregated_Achievement__c</fullName>
        <label>Narrative Disaggregated Achievement</label>
        <length>15000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Narrative_English_Lang_Dev_Attain_Target__c</fullName>
        <label>Narrative English Lang Dev Attain Target</label>
        <length>15000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Narrative_Other__c</fullName>
        <label>Narrative Other</label>
        <length>15000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Narrative_Postsecondary_Workforce_Target__c</fullName>
        <label>Narrative Postsecondary Workforce Target</label>
        <length>15000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Narrative_Student_Behavior__c</fullName>
        <label>Narrative Student Behavior</label>
        <length>15000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Narrative_Student_Engagement_Target__c</fullName>
        <label>Narrative Student Engagement Target</label>
        <length>15000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Optional_October_Review__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Optional October Review</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Other_Description__c</fullName>
        <label>Other (Description)</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>PLAN_TIMELINE_JAN__c</fullName>
        <label>January Timeline</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>PLAN_TIMELINE_OCT__c</fullName>
        <label>October Timeline</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>PLAN_TYPE_ASSIGNMENT__c</fullName>
        <label>Plan Type Assignment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>PSR_ACT_MeetCut__c</fullName>
        <label>xACT Composite Score Expectation</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>PSR_ACT_RateScore__c</fullName>
        <label>xACT Composite Score Results</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>PSR_Drop_MeetCut__c</fullName>
        <label>xDropout Rate Expectation</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>PSR_Drop_RateScore__c</fullName>
        <label>xDropout Rate Results</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>PS_ACT_RATING__c</fullName>
        <label>ACT Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Does Not Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approaching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exceeds</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>PS_ACT_SCORE__c</fullName>
        <label>ACT Score</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>PS_DROP_RATE__c</fullName>
        <label>Dropout Rate</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>PS_DROP_RATING__c</fullName>
        <label>Dropout Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Does Not Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approaching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exceeds</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>PS_GRAD_BEST_GR__c</fullName>
        <label>Grad Best</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>PS_GRAD_BEST_YR__c</fullName>
        <label>Grad Best Year</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>PS_GRAD_DSAG_RATING__c</fullName>
        <label>Disaggregated Graduation Rate</label>
        <picklist>
            <picklistValues>
                <fullName>Does Not Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approaching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exceeds</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>PS_GRAD_RATING__c</fullName>
        <label>PS Grad Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Approaching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does Not Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exceeds</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>PWR_AddMeas_1_MeetCut__c</fullName>
        <label>P&amp;WR Measure 1 Expectation</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>PWR_AddMeas_1_MeetNorm__c</fullName>
        <label>P&amp;WR Measure 1 Expectation Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>PWR_AddMeas_1_Metric__c</fullName>
        <label>P&amp;WR Measure 1 Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>PWR_AddMeas_1_Name__c</fullName>
        <label>Supplemental Measure 1 Name</label>
        <length>75</length>
        <type>Text</type>
    </fields><fields>
        <fullName>PWR_AddMeas_1_Rating__c</fullName>
        <label>P&amp;WR Measure 1 AEC SPF Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Does Not Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approaching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meets</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>PWR_AddMeas_1_Result__c</fullName>
        <label>P&amp;WR Measure 1 Results</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>PWR_AddMeas_2_MeetCut__c</fullName>
        <label>P&amp;WR Measure 2 Expectation</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>PWR_AddMeas_2_MeetNorm__c</fullName>
        <label>P&amp;WR Measure 2 Expectation Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>PWR_AddMeas_2_Metric__c</fullName>
        <label>P&amp;WR Measure 2 Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>PWR_AddMeas_2_Name__c</fullName>
        <label>P&amp;WR Measure 2 Name</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>PWR_AddMeas_2_Rating__c</fullName>
        <label>P&amp;WR Measure 2 AEC SPF Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Does Not Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approaching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meets</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>PWR_AddMeas_2_Result__c</fullName>
        <label>P&amp;WR Measure 2 Results</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Participation_95__c</fullName>
        <description>Per the 2016 waiver approval with the USDE, districts and schools not meeting state
assessment participation requirements must address why participation
expectations were not met, including what strategies will be put in to place as a
result. Note that specialized requirements are included for Title I in the Quality
Criteria document.</description>
        <inlineHelpText>districts and schools not meeting state
assessment participation requirements must address why participation
expectations were not met, including what strategies will be put in to place as a
result</inlineHelpText>
        <label>95% Participation</label>
        <picklist>
            <picklistValues>
                <fullName>Did Not Meet 95% student participation in all areas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Met 95% student participation in all areas</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Performance_Challenge_Narrative__c</fullName>
        <label>Performance Challenge Narrative</label>
        <length>50000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Public_Facing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Facing</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>RATING_DIRECTIONS__c</fullName>
        <label>Rating Directions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Re_Review_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is checked if a 2nd review is required.</description>
        <label>Re-Review Required</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Received_TIG__c</fullName>
        <label>Received TIG</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Recommended_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the Biennial Plan school is NOT required to submit a plan in this year.</inlineHelpText>
        <label>Recommended Year</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Related_Grant_Awards__c</fullName>
        <label>Related Grant Awards</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Required_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box for schools with Biennial Plans if the plan is required in this current year.</inlineHelpText>
        <label>Required Year</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Review_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is checked if the UIP requires the first review.</description>
        <label>Review Required</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Root_Cause_Narrative__c</fullName>
        <label>Root Cause Narrative</label>
        <length>50000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>SCHLS_BIENNIAL_FLEX__c</fullName>
        <description>The number of schools within a district that are eligible for Biennial Submission in a given year</description>
        <inlineHelpText>The number of schools within a district that are eligible for Biennial Submission in a given year</inlineHelpText>
        <label>Number of Schools Biennial Flex</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>SCHLS_ON_CLOCK_DIRECTIONS__c</fullName>
        <label>Schools on Clock Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>SCHLS_ON_CLOCK_NUM__c</fullName>
        <label>Number of Schools on Clock</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>SCHOOL_NAME__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>ZPIF_UIP1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>SCHOOL_NUMBER__c</fullName>
        <label>School Code</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>SIS_Grant_Instructions__c</fullName>
        <description>Title I competitive grant that support implementation of major improvement strategies and action steps identified in the school’s action plan.</description>
        <inlineHelpText>Title I competitive grant that support implementation of major improvement strategies and action steps identified in the school’s action plan.</inlineHelpText>
        <label>SIS Grant Instructions</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>SIS_Grant__c</fullName>
        <description>Title I competitive grant that support implementation of major improvement strategies and action steps identified in the school’s action plan.</description>
        <inlineHelpText>Title I competitive grant that support implementation of major improvement strategies and action steps identified in the school’s action plan.</inlineHelpText>
        <label>SIS Grant Type</label>
        <picklist>
            <picklistValues>
                <fullName>SIS Grantee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not an SIS Grantee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>SST_Expedited_Review__c</fullName>
        <label>SST/Expedited Review</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>STENG_AddMeas_1_MeetCutE__c</fullName>
        <label>SE Measure 1 Result Elem</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>STENG_AddMeas_1_MeetCut__c</fullName>
        <label>SE Measure 1 Expectation</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>STENG_AddMeas_1_MeetNorm__c</fullName>
        <label>SE Measure 1 Expectation Description</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>STENG_AddMeas_1_Metric__c</fullName>
        <label>SE Measure 1 Description</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>STENG_AddMeas_1_Name__c</fullName>
        <label>SE Measure 1 Name</label>
        <length>75</length>
        <type>Text</type>
    </fields><fields>
        <fullName>STENG_AddMeas_1_ResultH__c</fullName>
        <label>SE Measure 1 Result HS</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>STENG_AddMeas_1_ResultM__c</fullName>
        <label>SE Measure 1 Result MS</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>STENG_AddMeas_2_MeetCut__c</fullName>
        <label>SE Measure 2 Expectation</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>STENG_AddMeas_2_MeetNorm__c</fullName>
        <label>SE Measure 2 Expectation Description</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>STENG_AddMeas_2_Metric__c</fullName>
        <label>SE Measure 2 Description</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>STENG_AddMeas_2_Name__c</fullName>
        <label>SE Measure 2 Name</label>
        <length>75</length>
        <type>Text</type>
    </fields><fields>
        <fullName>STENG_AddMeas_3_MeetCut__c</fullName>
        <label>SE Measure 3 Expectation</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>STENG_AddMeas_3_MeetNorm__c</fullName>
        <label>SE Measure 3 Expectation Description</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>STENG_AddMeas_3_Metric__c</fullName>
        <label>SE Measure 3 Description</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>STENG_AddMeas_3_Name__c</fullName>
        <label>SE Measure 3 Name</label>
        <length>75</length>
        <type>Text</type>
    </fields><fields>
        <fullName>STENG_AddMeas_3_Result__c</fullName>
        <label>SE Measure 3 Results</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>STENG_Measure_2_Result__c</fullName>
        <label>SE Measure 2 Result</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>School_Improvement_Support_Grant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Section II</description>
        <label>School Improvement Support Grant</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>School_UIP_Solution_URL__c</fullName>
        <description>"&amp;OFP=CongaPDFs" +</description>
        <formula>"&amp;id=" + Id + 
"&amp;QueryId=[PPCandRC]a04c0000004VHaz,[TitleI]a04c0000003xSn8,[TIGTransf]a04c0000003xSnD,[TIGTurn]a04c0000003xSnX,[TIGClosure]a04c0000003xSnc?pv0=" + Id + 
"&amp;ReportID=[PYTarg]00Oc0000000Podn,[Challenges]00Oc0000000PnIj,[RCause]00Oc0000000PnJw,[MIS]00Oc0000000PnK1,[Contacts]00OF0000006JtlP,[Trends]00Oc0000000PpCx,[TrendAA]00Oc0000000PnaO,[TrendAG]00Oc0000000PnaT,[TrendAGG]00Oc0000000PnaY,[TargSet]00Oc0000000Po8L,[TargAA]00Oc0000000Po86,[TargAG]00Oc0000000Po8B,[TargAGG]00Oc0000000Po8L,[TargPWR]00Oc0000000Po8G?pv0=" + Id + 
"&amp;ReportID=[ActStep]00Oc0000000PYSS?pv0=" + Name + 
"&amp;ReportId=[DistSchTA]00Oc0000000PZz5?pv0=" + Id + 
"&amp;TemplateID=a0HF000000MgnRS," + Addenda_Template_ID__c + "{QVar0}" + 
"&amp;OFN=" + DIST_NUMBER__c + "-" + SCHOOL_NUMBER__c + " - Draft" + 
"&amp;DefaultPDF=0" + 
"&amp;QVar0Id=a04c0000003xSwE" + 
"&amp;QVar0Format=10010" + 
"&amp;OFP=UIP + Documents" + 
"&amp;QMode=19"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga: School UIP Solution URL DRIVE</label>
        <type>Text</type>
    </fields><fields>
        <fullName>School_UIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conga: School UIP</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Section_1_Percent_Complete__c</fullName>
        <label>Section I Percent Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Section_1__c</fullName>
        <label>Section I</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Loaded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Updated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Section_2_Percent_Complete__c</fullName>
        <label>Section 2 Percent Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Section_2__c</fullName>
        <label>Section II</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Section_3_Percent_Complete__c</fullName>
        <label>Section 3 Percent Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Section_3__c</fullName>
        <label>Section III</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Section_III_Current_Performance_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Section III Current Performance Complete</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Section_III_Data_Narrative_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check when the Data Narrative is complete.</inlineHelpText>
        <label>Section III Data Narrative Complete</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Section_III_PPCs_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Section III PPCs Complete</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Section_III_Progress_Status__c</fullName>
        <formula>If (AND( Section_III_Worksheet_1_Complete__c , Section_III_Worksheet_2_Complete__c , Section_III_Data_Narrative_Complete__c,Section_III_PPCs_Complete__c ,Section_III_Root_Cause_Complete__c,Section_III_Trend_Analysis_Complete__c,Section_III_Current_Performance_Complete__c)= True, "Ready to Submit", "In Progress")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Section III Progress Status</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Section_III_Root_Cause_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Section III Root Cause Complete</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Section_III_Trend_Analysis_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Section III Trend Analysis Complete</label>
        <type>Checkbox</type>
    </fields>    </recordTypes></CustomObject>